--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,15 @@ p {
 
 #jewel1, #jewel2, #jewel3, #jewel4 {
   text-align: center;
-  width: 150px;
-  height: 150px;
-  background-size: cover;
-  background-color: white;}
+    width:  100px;
+    height: 100px;
+    background-position:50% 50%;
+    background-repeat:no-repeat;
+    background-size:cover;
+
+  }
+  video {
+  float: left; 
+  width: 25%;  
+  margin-bottom: 0.5em;}
 
