--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,19 @@ body {
   background: url("../images/background.png");
   background: cover;
 }
+h2{ margin-left: 5%;
+}
+header{
+  background-size: 1.5em;
+  text-align: center;
+  color:white;
+  text-shadow: 2px 2px #990000;
+}
 p {
   font-size: 20px;
   color:white;
+ margin-left: 3%;
+ margin-right:3%;
 }
 
 #jewel1 {
@@ -32,11 +42,12 @@ p {
 
 #jewel1, #jewel2, #jewel3, #jewel4 {
   text-align: center;
-    width:  100px;
-    height: 100px;
+    width:  125px;
+    height: 125px;
     background-position:50% 50%;
     background-repeat:no-repeat;
     background-size:cover;
+    border-radius: 25px;
 
   }
   video {
